<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="header_main">Playlist Maker</string>
    <string name="header_settings">Настройки</string>
    <string name="button_search">Поиск</string>
    <string name="button_library">Медиатека</string>
    <string name="header_library">Медиатека</string>
    <string name="library_favorite_tracks">Избранные треки</string>
    <string name="library_playlists">Плейлисты</string>
    <string name="library_empty_favorite_tracks">Ваша медиатека пуста</string>
    <string name="library_empty_playlists">Вы не создали\nни одного плейлиста</string>
    <string name="library_new_playlist">Новый плейлист</string>
    <string name="button_settings">Настройки</string>
    <string name="settings_dark_theme">Темная тема</string>
    <string name="settings_share">Поделиться приложением</string>
    <string name="settings_support">Написать в поддержку</string>
    <string name="settings_agreement">Пользовательское соглашение</string>

    <string name="share_app_link">https://practicum.yandex.ru/android-developer/?from=main_search_item</string>
    <string name="support_email">glazev_artem@inbox.ru</string>
    <string name="support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="agreement_link">https://yandex.ru/legal/practicum_offer/ru/</string>

    <string name="search_hint">Поиск</string>
    <string name="header_search">Поиск</string>

    <string name="nothing_found">Ничего не нашлось</string>
    <string name="something_went_wrong">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="search_history_title">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
</resources>
