<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_navigation"
    app:startDestination="@id/libraryFragment">

    <fragment
        android:id="@+id/libraryFragment"
        android:name="com.glazev.playlistmaker.presentation.ui.library.LibraryFragment"
        android:label="@string/header_library" />

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.glazev.playlistmaker.presentation.ui.SearchFragment"
        android:label="@string/header_search">
        <action
            android:id="@+id/action_searchFragment_to_audioPlayerFragment"
            app:destination="@id/audioPlayerFragment" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.glazev.playlistmaker.presentation.ui.SettingsFragment"
        android:label="@string/header_settings" />

    <fragment
        android:id="@+id/audioPlayerFragment"
        android:name="com.glazev.playlistmaker.presentation.ui.AudioPlayerFragment"
        android:label="@string/audio_player" />

</navigation>
