<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/settingsBackgroundColor"
    android:orientation="vertical">

    <TextView
        style="@style/HeaderTextStyle"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        android:paddingHorizontal="16dp"
        android:text="@string/header_settings"
        android:textColor="?attr/settingsHeaderTextColor" />

    <FrameLayout
        style="@style/SettingsItemLayoutStyle"
        android:layout_marginTop="@dimen/margin_24">

        <TextView
            style="@style/SettingsItemTextStyle"
            android:text="@string/settings_dark_theme" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/themeSwitcher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:padding="0dp"
            app:thumbTint="@color/switch_thumb_selector"
            app:trackTint="@color/switch_track_selector" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/share_button"
        style="@style/SettingsItemLayoutStyle"
        android:clickable="true"
        android:focusable="true">

        <TextView
            style="@style/SettingsItemTextStyle"
            android:text="@string/settings_share" />

        <ImageView
            style="@style/SettingsIconStyle"
            android:contentDescription="@null"
            android:src="@drawable/ic_share_24" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/support_button"
        style="@style/SettingsItemLayoutStyle"
        android:clickable="true"
        android:focusable="true">

        <TextView
            style="@style/SettingsItemTextStyle"
            android:text="@string/settings_support" />

        <ImageView
            style="@style/SettingsIconStyle"
            android:contentDescription="@null"
            android:src="@drawable/ic_support_24" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/agreement_button"
        style="@style/SettingsItemLayoutStyle"
        android:clickable="true"
        android:focusable="true">

        <TextView
            style="@style/SettingsItemTextStyle"
            android:text="@string/settings_agreement" />

        <ImageView
            style="@style/SettingsIconStyle"
            android:contentDescription="@null"
            android:src="@drawable/ic_arrow_forward_24" />
    </FrameLayout>

</LinearLayout>
