<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/settingsBackgroundColor"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/padding_16">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_arrow_back_24"
            app:tint="?attr/settingsHeaderTextColor" />

        <TextView
            style="@style/HeaderTextStyle"
            android:layout_marginStart="@dimen/margin_24"
            android:text="@string/header_settings"
            android:textColor="?attr/settingsHeaderTextColor" />
    </LinearLayout>

    <FrameLayout
        style="@style/SettingsItemLayoutStyle"
        android:layout_marginTop="@dimen/margin_24">

        <TextView
            style="@style/SettingsItemTextStyle"
            android:text="@string/settings_dark_theme" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/theme_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:checked="true" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/share_button"
        style="@style/SettingsItemLayoutStyle"
        android:clickable="true"
        android:focusable="true">

        <TextView
            style="@style/SettingsItemTextStyle"
            android:text="@string/settings_share" />

        <ImageView
            style="@style/SettingsIconStyle"
            android:src="@drawable/ic_share_24" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/support_button"
        style="@style/SettingsItemLayoutStyle"
        android:clickable="true"
        android:focusable="true">

        <TextView
            style="@style/SettingsItemTextStyle"
            android:text="@string/settings_support" />

        <ImageView
            style="@style/SettingsIconStyle"
            android:src="@drawable/ic_support_24" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/agreement_button"
        style="@style/SettingsItemLayoutStyle"
        android:clickable="true"
        android:focusable="true">

        <TextView
            style="@style/SettingsItemTextStyle"
            android:text="@string/settings_agreement" />

        <ImageView
            style="@style/SettingsIconStyle"
            android:src="@drawable/ic_arrow_forward_24" />
    </FrameLayout>

</LinearLayout>
