<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    android:padding="@dimen/padding_16">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_14"
        android:layout_marginBottom="@dimen/margin_24"
        android:text="@string/header_main"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_header"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_search"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="@dimen/margin_16"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/button_search"
        android:textAllCaps="false"
        android:textColor="@color/black1"
        android:textSize="@dimen/text_size_button"
        app:cornerRadius="@dimen/button_corner_radius"
        app:icon="@drawable/ic_search"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/button_icon_padding"
        app:iconTint="@color/black1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_library"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="@dimen/margin_16"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/button_library"
        android:textAllCaps="false"
        android:textColor="@color/black1"
        android:textSize="@dimen/text_size_button"
        app:cornerRadius="@dimen/button_corner_radius"
        app:icon="@drawable/ic_library"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/button_icon_padding"
        app:iconTint="@color/black1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_settings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="@dimen/margin_16"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/button_settings"
        android:textAllCaps="false"
        android:textColor="@color/black1"
        android:textSize="@dimen/text_size_button"
        app:cornerRadius="@dimen/button_corner_radius"
        app:icon="@drawable/ic_settings"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/button_icon_padding"
        app:iconTint="@color/black1" />

</LinearLayout>