<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/settingsBackgroundColor"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/padding_16">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_arrow_back_24"
            app:tint="?attr/settingsHeaderTextColor" />

        <TextView
            style="@style/HeaderTextStyle"
            android:layout_marginStart="@dimen/margin_24"
            android:text="@string/header_search"
            android:textColor="?attr/settingsHeaderTextColor" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/search_edit_text_height"
        android:layout_marginHorizontal="@dimen/padding_16"
        android:layout_marginTop="@dimen/margin_8"
        android:background="@drawable/search_bar_background">

        <ImageView
            android:layout_width="@dimen/search_edit_text_icon_size"
            android:layout_height="@dimen/search_edit_text_icon_size"
            android:layout_gravity="center_vertical|start"
            android:layout_marginStart="@dimen/margin_12"
            android:src="@drawable/ic_search_16"
            app:tint="?attr/searchFieldIconTint" />

        <EditText
            android:id="@+id/input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/margin_36"
            android:layout_marginEnd="@dimen/margin_36"
            android:background="@null"
            android:fontFamily="@font/ys_display_regular"
            android:hint="@string/search_hint"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:textColor="?attr/searchFieldTextColor"
            android:textColorHint="?attr/searchFieldHintColor"
            android:textSize="@dimen/text_size" />

        <ImageView
            android:id="@+id/clear_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="@dimen/margin_12"
            android:src="@drawable/ic_clear_16"
            android:visibility="gone"
            app:tint="?attr/searchFieldClearIconTint" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_16">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <LinearLayout
            android:id="@+id/placeholder_nothing_found"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="86dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingHorizontal="24dp"
            android:visibility="gone">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="?attr/nothingFoundImage" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/ys_display_medium"
                android:text="@string/nothing_found"
                android:textAlignment="center"
                android:textColor="?attr/settingsHeaderTextColor"
                android:textSize="19sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/placeholder_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="86dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingHorizontal="24dp"
            android:visibility="gone">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="?attr/noInternetImage" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/ys_display_medium"
                android:text="@string/something_went_wrong"
                android:textAlignment="center"
                android:textColor="?attr/settingsHeaderTextColor"
                android:textSize="19sp" />

            <Button
                android:id="@+id/refresh_button"
                android:layout_width="91dp"
                android:layout_height="36dp"
                android:layout_marginTop="24dp"
                android:background="?attr/refreshButtonDrawable"
                app:backgroundTint="@null"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:padding="0dp"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:foreground="?attr/selectableItemBackground"
                android:textAllCaps="false" />
        </LinearLayout>
    </FrameLayout>
</LinearLayout>
