<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/search_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/settingsBackgroundColor"
    android:orientation="vertical">

    <TextView
        style="@style/HeaderTextStyle"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        android:paddingHorizontal="16dp"
        android:text="@string/header_search"
        android:textColor="?attr/settingsHeaderTextColor" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/search_edit_text_height"
        android:layout_marginHorizontal="@dimen/padding_16"
        android:layout_marginTop="@dimen/margin_8"
        android:background="@drawable/search_bar_background">

        <ImageView
            android:layout_width="@dimen/search_edit_text_icon_size"
            android:layout_height="@dimen/search_edit_text_icon_size"
            android:layout_gravity="center_vertical|start"
            android:layout_marginStart="@dimen/margin_12"
            android:contentDescription="@null"
            android:src="@drawable/ic_search_16"
            app:tint="?attr/searchFieldIconTint" />

        <EditText
            android:id="@+id/input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/margin_36"
            android:layout_marginEnd="@dimen/margin_36"
            android:background="@null"
            android:fontFamily="@font/ys_display_regular"
            android:hint="@string/search_hint"
            android:importantForAutofill="no"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:singleLine="true"
            android:textCursorDrawable="@drawable/cursor_blue"
            android:textColor="?attr/searchFieldTextColor"
            android:textColorHint="?attr/searchFieldHintColor"
            android:textSize="@dimen/text_size" />

        <ImageView
            android:id="@+id/clear_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="@dimen/margin_12"
            android:contentDescription="@null"
            android:src="@drawable/ic_clear_16"
            android:visibility="gone"
            app:tint="?attr/searchFieldClearIconTint" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_weight="1">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <LinearLayout
            android:id="@+id/placeholder_nothing_found"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="86dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingHorizontal="24dp"
            android:visibility="gone">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:contentDescription="@null"
                android:src="?attr/nothingFoundImage" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/ys_display_medium"
                android:text="@string/nothing_found"
                android:textAlignment="center"
                android:textColor="?attr/settingsHeaderTextColor"
                android:textSize="19sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/placeholder_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="86dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingHorizontal="24dp"
            android:visibility="gone">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:contentDescription="@null"
                android:src="?attr/noInternetImage" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/ys_display_medium"
                android:text="@string/something_went_wrong"
                android:textAlignment="center"
                android:textColor="?attr/settingsHeaderTextColor"
                android:textSize="19sp" />

            <Button
                android:id="@+id/refresh_button"
                android:layout_width="91dp"
                android:layout_height="36dp"
                android:layout_marginTop="24dp"
                android:background="?attr/refreshButtonDrawable"
                android:foreground="?attr/selectableItemBackground"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:padding="0dp"
                android:textAllCaps="false"
                app:backgroundTint="@null" />
        </LinearLayout>

        <ScrollView
            android:id="@+id/history_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="12dp"
                    android:fontFamily="@font/ys_display_medium"
                    android:text="@string/search_history_title"
                    android:textColor="?attr/settingsHeaderTextColor"
                    android:textSize="19sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/history_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                <Button
                    android:id="@+id/clear_history_button"
                    android:layout_width="148dp"
                    android:layout_height="36dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="24dp"
                    android:background="?attr/clearHistoryButtonDrawable"
                    android:foreground="?attr/selectableItemBackground"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:padding="0dp"
                    android:textAllCaps="false"
                    app:backgroundTint="@null" />
            </LinearLayout>
        </ScrollView>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="148dp"
            android:indeterminateTint="@color/blue"
            android:visibility="gone" />
    </FrameLayout>
</LinearLayout>
