<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/player_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="?attr/settingsBackgroundColor">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="12dp"
            android:src="@drawable/ic_arrow_back_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?attr/settingsHeaderTextColor" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/album_cover"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="38dp"
            android:layout_marginEnd="24dp"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/back_button"
            app:shapeAppearanceOverlay="@style/RoundedCorners8"
            tools:src="@drawable/ic_placeholder_album" />

        <TextView
            android:id="@+id/track_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/ys_display_medium"
            android:textColor="?attr/settingsHeaderTextColor"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/album_cover"
            tools:text="Yesterday (Remastered 2009)" />

        <TextView
            android:id="@+id/artist_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/ys_display_medium"
            android:textColor="?attr/settingsHeaderTextColor"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/track_name"
            tools:text="The Beatles" />

        <ImageView
            android:id="@+id/add_button"
            android:layout_width="51dp"
            android:layout_height="51dp"
            android:layout_marginStart="24dp"
            android:src="@drawable/button_add_playlist"
            app:layout_constraintBottom_toBottomOf="@id/play_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/play_button" />

        <ImageView
            android:id="@+id/play_button"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="58dp"
            android:src="?attr/playButtonDrawable"
            app:layout_constraintEnd_toStartOf="@id/like_button"
            app:layout_constraintStart_toEndOf="@id/add_button"
            app:layout_constraintTop_toBottomOf="@id/artist_name" />

        <ImageView
            android:id="@+id/like_button"
            android:layout_width="51dp"
            android:layout_height="51dp"
            android:layout_marginEnd="24dp"
            android:src="@drawable/button__dislike"
            app:layout_constraintBottom_toBottomOf="@id/play_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/play_button" />

        <TextView
            android:id="@+id/playback_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/ys_display_medium"
            android:textColor="?attr/settingsHeaderTextColor"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="@id/play_button"
            app:layout_constraintStart_toStartOf="@id/play_button"
            app:layout_constraintTop_toBottomOf="@id/play_button"
            tools:text="0:30" />

        <TextView
            android:id="@+id/duration_label"
            style="@style/PlayerInfoLabel"
            android:layout_marginTop="30dp"
            android:text="@string/duration"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/playback_time" />

        <TextView
            android:id="@+id/duration_value"
            style="@style/PlayerInfoValue"
            app:layout_constraintBaseline_toBaselineOf="@id/duration_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/duration_label"
            tools:text="5:35" />

        <TextView
            android:id="@+id/album_label"
            style="@style/PlayerInfoLabel"
            android:text="@string/album"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/duration_label" />

        <TextView
            android:id="@+id/album_value"
            style="@style/PlayerInfoValue"
            app:layout_constraintBaseline_toBaselineOf="@id/album_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/album_label"
            tools:text="Yesterday (Remastered 2009)" />

        <TextView
            android:id="@+id/year_label"
            style="@style/PlayerInfoLabel"
            android:text="@string/year"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/album_label" />

        <TextView
            android:id="@+id/year_value"
            style="@style/PlayerInfoValue"
            app:layout_constraintBaseline_toBaselineOf="@id/year_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/year_label"
            tools:text="1965" />

        <TextView
            android:id="@+id/genre_label"
            style="@style/PlayerInfoLabel"
            android:text="@string/genre"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/year_label" />

        <TextView
            android:id="@+id/genre_value"
            style="@style/PlayerInfoValue"
            app:layout_constraintBaseline_toBaselineOf="@id/genre_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/genre_label"
            tools:text="Rock" />

        <TextView
            android:id="@+id/country_label"
            style="@style/PlayerInfoLabel"
            android:text="@string/country"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/genre_label" />

        <TextView
            android:id="@+id/country_value"
            style="@style/PlayerInfoValue"
            app:layout_constraintBaseline_toBaselineOf="@id/country_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/country_label"
            tools:text="Великобритания" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/album_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="album_label,album_value" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/year_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="year_label,year_value" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
